--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: #fdf2e9;
-
+  position: relative;
   /* want header to be sticky later */
   height: 9.6rem;
   padding: 0 4.8rem;
@@ -55,6 +55,22 @@
 .main-nav-link.nav-cta:hover,
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
+}
+
+/* MOBILE */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+.icon-mobile-nav {
+  width: 4.8rem;
+  height: 4.8rem;
+  color: #333;
+}
+.icon-mobile-nav[name='close-outline'] {
+  display: none;
 }
 
 /*********************/
@@ -312,6 +328,9 @@ strong {
   grid-template-columns: 55fr 45fr;
   align-items: center;
 }
+.testimonials-container {
+  padding: 9.6rem;
+}
 .testinomials {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -337,6 +356,7 @@ strong {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1.6rem;
+  padding: 1.6rem;
 }
 .gallery-item {
   overflow: hidden;
@@ -464,6 +484,7 @@ strong {
 
 .cta {
   display: grid;
+  /* 2/3 = 66.6% + 1/3=33.3% */
   grid-template-columns: 2fr 1fr;
   background-color: #e67e22;
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.3);
