--- a/css/queries.css
+++ b/css/queries.css
@@ -119,9 +119,11 @@
   /* MOBILE NAV */
   .btn-mobile-nav {
     display: block;
+    z-index: 1000;
   }
   .main-nav {
-    background-color: rgba(247, 247, 247, 0.91);
+    background-color: rgba(250, 229, 211, 0.95);
+    border-radius: 11px;
     position: absolute;
     top: 0;
     right: 0;
@@ -172,12 +174,6 @@
   .main-nav-link:visited {
     font-size: 3rem;
   }
-
-  /* .icon-mobile-nav {
-    width: 4.8rem;
-    height: 4.8rem;
-    color: #333;
-   } */
 }
 
 /*********************/
@@ -273,6 +269,9 @@
     height: 32rem;
     grid-row: 1;
   }
+
+  .main-nav {
+    width: 80%;
+    height: 100vh;
+  }
 }
-
-
