--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,9 @@
   cursor: pointer;
   display: none;
 }
+.icon-mobile-nav:hover {
+  color: #e67e22;
+}
 .icon-mobile-nav {
   width: 4.8rem;
   height: 4.8rem;
